--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -8,7 +8,7 @@
               <div class="full">
                  <div class="center-desk">
                     <div class="logo">
-                       <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                       <a href="/"><img src="images/logo.png" alt="#" /></a>
                     </div>
                  </div>
               </div>
@@ -21,22 +21,22 @@
                  <div class="collapse navbar-collapse" id="navbarsExample04">
                     <ul class="navbar-nav mr-auto">
                        <li class="nav-item active">
-                          <a class="nav-link" href="index.html">Home</a>
+                          <a class="nav-link" href="/">Home</a>
                        </li>
                        <li class="nav-item">
-                          <a class="nav-link" href="about.html">About</a>
+                          <a class="nav-link" href="/about">About</a>
                        </li>
                        <li class="nav-item">
-                          <a class="nav-link" href="service.html">Services</a>
+                          <a class="nav-link" href="/service">Services</a>
                        </li>
                        <li class="nav-item">
-                          <a class="nav-link" href="trainer.html">Trainer</a>
+                          <a class="nav-link" href="/trainer">Trainer</a>
                        </li>
                        <li class="nav-item">
-                          <a class="nav-link" href="gallery.html">Gallery</a>
+                          <a class="nav-link" href="/gallery">Gallery</a>
                        </li>
                        <li class="nav-item">
-                          <a class="nav-link" href="contact.html">Contact Us</a>
+                          <a class="nav-link" href="/contact">Contact Us</a>
                        </li>
                     </ul>
                  </div>
