--- a/views/trainer.ejs
+++ b/views/trainer.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/_header')  %> 
 
-<%- include('partials/_navigations') %>
+<%- include('partials/_navigation') %>
 
         <div class="back_re">
          <div class="container">
