--- a/views/workout.ejs
+++ b/views/workout.ejs
@@ -19,26 +19,21 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <p>The point of using Lorem Ipsum is that it has a more-or-less </p>
+                     <p>Choose a category that best suits the workout you're searching for. Once in the category, use the sort and filter options to find the right workout for your experience and goals.</p>
                   </div>
                </div>
             </div>
             <div class="row">
+               <% for (let i = 0; i<workouts.length;i++) { %> 
                <div class="col-md-4">
                   <div class="se_img">
                      <figure><img src="images/service1.jpg" alt="#"/></figure>
                   </div>
-               </div>
-               <div class="col-md-4">
-                  <div class="se_img">
-                     <figure><img src="images/service2.jpg" alt="#"/></figure>
+                  <div class="text-center text-white">
+                     <%= workouts[i].name %> 
                   </div>
                </div>
-               <div class="col-md-4">
-                  <div class="se_img">
-                     <figure><img src="images/service3.jpg" alt="#"/></figure>
-                  </div>
-               </div>
+               <% } %> 
             </div>
          </div>
       </div>
