--- a/views/workout.ejs
+++ b/views/workout.ejs
@@ -7,7 +7,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="title">
-                  <h2>Our Services</h2>
+                  <h2>Workouts Categories</h2>
                   </div>
                </div>
             </div>
@@ -26,12 +26,14 @@
             <div class="row">
                <% for (let i = 0; i<workouts.length;i++) { %> 
                <div class="col-md-4">
+               <a href="/workout/<%= workouts[i]._id %>">   
                   <div class="se_img">
                      <figure><img src="images/service1.jpg" alt="#"/></figure>
                   </div>
-                  <div class="text-center text-white">
-                     <%= workouts[i].name %> 
+                  <div class="text-center">
+                    <h3 class="text-white"><%= workouts[i].name %></h3>
                   </div>
+               </a>
                </div>
                <% } %> 
             </div>
