single workout page slugify completed

--- a/views/workout.ejs
+++ b/views/workout.ejs
@@ -26,7 +26,7 @@
             <div class="row">
                <% for (let i = 0; i<workouts.length;i++) { %> 
                <div class="col-md-4">
-               <a href="/workout/<%= workouts[i]._id %>">   
+               <a href="/workout/<%= workouts[i].slug %>">   
                   <div class="se_img">
                      <figure><img src="images/service1.jpg" alt="#"/></figure>
                   </div>
