--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -39,6 +39,10 @@
                           <a class="nav-link" href="/contact">Contact Us</a>
                        </li>
                     </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                     <li class="mr-3"><a href="/register"><i class="fa fa-user-plus fa-2x" aria-hidden="true"></i></a></li>
+                     <li><a href="/login"><i class="fa fa-sign-in fa-2x" aria-hidden="true"></i></a></li>
+                   </ul>
                  </div>
               </nav>
            </div>
