--- a/views/workout-single.ejs
+++ b/views/workout-single.ejs
@@ -19,6 +19,7 @@
      <div class="row">
         <div class="col-md-12">
            <div class="titlepage">
+              <h3 class="text-white">Category:<span><%= workout.category.name  %></span></h3>
               <p><%=  workout.description %></p>
            </div>
           </div>
