--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -39,6 +39,7 @@
                           <a class="nav-link" href="/contact">Contact Us</a>
                        </li>
                     </ul>
+                    <% if(!userIN) { %> 
                     <ul class="nav navbar-nav navbar-right ml-5">
                      <li class="nav-item" class="mr-5">
                         <a
@@ -54,6 +55,17 @@
                         ></a>
                      </li>
                    </ul>
+                   <% } %>
+                   <% if(userIN) { %>
+                     <ul class="nav navbar-nav navbar-right ml-5">
+                        <li class="nav-item">
+                           <a
+                              href="/user/logout"
+                              ><span><i class="fa fa-sign-out fa-2x" aria-hidden="true"></i></span
+                           ></a>
+                        </li>
+                      </ul>
+                   <% } %>   
                  </div>
               </nav>
            </div>
