--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
           <div class="contact_form">
               <div id="message">
               </div>
-              <form method="post" action="/user/login">
+              <form method="post" action="/user/register">
                   <div class="row row-fluid">
                       <div class="offset-2 col-lg-8 col-md-8 col-sm-8 mb-3">
                           <input type="text" name="name" id="name" class="form-control" placeholder="Name">
