workout photo uploaded functionality added and dashboard pagecreate workout form integrated

--- a/views/workout.ejs
+++ b/views/workout.ejs
@@ -28,7 +28,7 @@
                <div class="col-md-4">
                <a href="/workout/<%= workouts[i].slug %>">   
                   <div class="se_img">
-                     <figure><img src="images/service1.jpg" alt="#"/></figure>
+                     <figure><img src="<%= workouts[i].image  %>" alt="#"/></figure>
                   </div>
                   <div class="text-center">
                     <h3 class="text-white"><%= workouts[i].name %></h3>
