--- a/views/register.ejs
+++ b/views/register.ejs
@@ -21,6 +21,12 @@
                           <input type="email" name="email" id="email" class="form-control" placeholder="Email">
                       </div>
                       <div class="offset-2 col-lg-8 col-md-8 col-sm-8 mb-3">
+                        <select class="form-control" name="role">
+                            <option>Member</option>
+                            <option>Trainer</option>
+                        </select>
+                      </div>
+                      <div class="offset-2 col-lg-8 col-md-8 col-sm-8 mb-3">
                           <input type="password" name="password" id="password" class="form-control" placeholder="Password">
                       </div>
                       <div class="offset-2 col-lg-8 col-md-8 col-sm-8">
