--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,7 +5,7 @@
 
 <div class="container">
   <div class="section-title text-center">
-      <h3 class="mt-5">REGİSTER</h3>
+      <h1 class="mt-5">REGİSTER</h1>
 
   <div class="row">
       <div class="col-xl-12 col-md-12 col-sm-12">
@@ -22,8 +22,8 @@
                       </div>
                       <div class="offset-2 col-lg-8 col-md-8 col-sm-8 mb-3">
                         <select class="form-control" name="role">
-                            <option>Member</option>
-                            <option>Trainer</option>
+                            <option>member</option>
+                            <option>trainer</option>
                         </select>
                       </div>
                       <div class="offset-2 col-lg-8 col-md-8 col-sm-8 mb-3">
