realtionship completed between workout and trainer

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,5 +1,6 @@
 <%- include('partials/_header') %> <%- include('partials/_navigation') %>
 
+<% if (user.role == "trainer") {  %> 
 <div class="back_re">
   <div class="container">
     <div class="row">
@@ -58,6 +59,9 @@
                             required
                           />
                         </div>
+                        <div class="form-group">
+                          <input type="hidden" name="role" class="form-control"  value="<%= user.role %>">
+                        </div>
                           <div class="form-group mb-3">
                             <select name="category" class="form-control">
                               <option value="" disabled selected>Select category</option>    
@@ -102,5 +106,7 @@
     </div>
   </div>
 </div>
+
+<% } %> 
 
 <%- include('partials/_footer') %>
