--- a/views/workout-single.ejs
+++ b/views/workout-single.ejs
@@ -19,7 +19,8 @@
      <div class="row">
         <div class="col-md-12">
            <div class="titlepage">
-              <h3 class="text-white">Category:<span><%= workout.category.name  %></span></h3>
+              <h3 class="text-white">Category: <span><%= workout.category.name  %></span></h3>
+              <h3 class="text-white">Trainer: <span><%= workout.user.name  %></span></h3>
               <p><%=  workout.description %></p>
            </div>
           </div>
