--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -21,12 +21,24 @@
           <!-- Button trigger modal -->
           <button
             type="button"
-            class="btn btn-success"
+            class="btn btn-success mb-3"
             data-toggle="modal"
             data-target="#addWorkout"
           >
             Create New Workout
           </button>
+          <% for (let i = 0; i<workouts.length;i++) { %> 
+            <div class="col-md-4">
+            <a href="/workout/<%= workouts[i].slug %>">   
+               <div class="se_img">
+                  <figure><img src="/<%= workouts[i].image  %>" alt="#"/></figure>
+               </div>
+               <div class="text-center">
+                 <h3 class="text-white"><%= workouts[i].name %></h3>
+               </div>
+            </a>
+            </div>
+            <% } %> 
           <!-- Modal -->
           <div
             class="modal fade"
