--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -36,8 +36,13 @@
                           <a class="nav-link" href="/gallery">Gallery</a>
                        </li>
                        <li class="nav-item <%= page_name=='contact' && 'active' %>">
-                          <a class="nav-link" href="/contact">Contact Us</a>
+                          <a class="nav-link" href="/contact">Contact</a>
                        </li>
+                       <% if(userIN) { %> 
+                       <li class="nav-item <%= page_name=='dashboard' && 'active' %>">
+                        <a class="nav-link" href="/user/dashboard">Dashboard</a>
+                        </li>
+                       <% } %> 
                     </ul>
                     <% if(!userIN) { %> 
                     <ul class="nav navbar-nav navbar-right ml-5">
