--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -40,10 +40,11 @@
             <div class="clearfix">
               <ul style="list-style-type: none;">
                 <li style="float: left;"><button class="btn btn-warning rounded-10 text-white"
-                  data-toggle="modal" data-target="#updateCourse<%= workouts[i]._id  %>"
+                  data-toggle="modal" data-target="#updateWorkout<%= workouts[i]._id  %>"
                   >
                   <span>UPDATE</span>
-                </button></li>
+                </button>
+              </li>
                 <li style="float: right;"><a href="/workout/<%= workouts[i].slug %>?_method=DELETE" 
                   onclick="return confirm('Are you sure?')"
                   class="btn btn-danger rounded-10 text-white">
@@ -52,6 +53,58 @@
               </ul>
             </div>
             </div>
+             <!-- Update Modal-->
+      <div class="modal fade" id="updateWorkout<%= workouts[i]._id  %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+          <div class="modal-content">
+              <div class="modal-body customer-box">
+                <!-- Tab Panes -->
+                <div class="tab-content">
+                  <div class="tab-pane active" id="Login">
+                    <form method="post" action="/workout/<%= workouts[i].slug  %>?_method=PUT" class="form-horizontal">
+                        <div class="form-group">
+                          <div class="col-sm-12">
+                            <input type="text" name="name" class="form-control" value="<%= workouts[i].name  %>">
+                            </div>
+                          </div>
+                          <div class="col-sm-12">
+                            <input type="hidden" name="role" class="form-control"  value="<%= user.role%>" >
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <div class="col-sm-12">
+                              <textarea name="description" class="form-control" cols="30" rows="8"
+                              required
+                              ><%= workouts[i].description  %></textarea>
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <div class="col-sm-12">
+                              <select name="category" class="form-control">  
+                                <% for(let i = 0; i<categories.length; i++) { %> 
+                                <option value="<%= categories[i]._id %>"><%= categories[i].name %> </option>
+                                <% } %> 
+                                </select>
+                              </div>
+                            </div>
+                          <div class="row">
+                            <div class="col-sm-10">
+                              <button type="submit" class="btn btn-success btn-radius btn-brd grd1">
+                                UPDATE
+                              </button>	
+                              <button type="submit" class="btn btn-light btn-radius btn-brd grd1"
+                                data-dismiss="modal" aria-hidden="true"
+                              >
+                                Cancel	
+                              </button>
+                            </div>	
+                          </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </div>
             <% } %> 
           <!-- Modal -->
           <div
