user image uploaded functionality added and completed, this image info send to trainer page

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -21,6 +21,9 @@
                           <input type="email" name="email" id="email" class="form-control" placeholder="Email">
                       </div>
                       <div class="offset-2 col-lg-8 col-md-8 col-sm-8 mb-3">
+                        <input type="file" name="image" id="image" class="form-control" value="image" hidden>
+                     </div>
+                      <div class="offset-2 col-lg-8 col-md-8 col-sm-8 mb-3">
                         <select class="form-control" name="role">
                             <option>member</option>
                             <option>trainer</option>
