--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,12 +6,68 @@
     <div class="row">
       <div class="col-md-12">
         <div class="title">
+          <% if (user.image) { %> 
+          <img class="rounded-circle mt-3" alt="100x100" width="200" height="200" src="/<%= user.image %>"
+          data-holder-rendered="true">
+          <% } else { %>
+          <button
+            type="button"
+            class="btn mb-3"
+            data-toggle="modal"
+            data-target="#addImage"
+            style="
+              background-color: transparent;
+              background-repeat: no-repeat;
+              border: none;
+              cursor: pointer;
+              overflow: hidden;
+              outline: none;
+            "
+          ><img class="rounded-circle mt-3" alt="100x100" width="200" height="200" src="/images/profile-avatar.jpg"
+          data-holder-rendered="true"></button>
+          <% } %> 
           <h2><%= user.name %></h2>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<div class="modal fade" id="addImage" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+        <div class="modal-body customer-box">
+          <!-- Tab Panes -->
+          <div class="tab-content">
+            <div class="tab-pane active" id="Login">
+              <form method="post" action="/user/upload?_method=PUT" class="form-horizontal" enctype="multipart/form-data">
+                  <div class="form-group">
+                    <div class="col-sm-12">
+                      <input type="file" name="image" class="form-control">
+                      </div>
+                    </div>
+                    <div class="col-sm-12">
+                      <input type="hidden" name="role" class="form-control"  value="<%= user.role%>" >
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-10">
+                        <button type="submit" class="btn btn-success btn-radius btn-brd grd1">
+                          UPDATE
+                        </button>	
+                        <button type="submit" class="btn btn-light btn-radius btn-brd grd1"
+                          data-dismiss="modal" aria-hidden="true"
+                        >
+                          Cancel	
+                        </button>
+                      </div>	
+                    </div>
+                </form>
+              </div>
+            </div>
+          </div>
+      </div>
+  </div>
 
 <div class="services">
   <div class="container">
@@ -27,85 +83,87 @@
           >
             Create New Workout
           </button>
-          <% for (let i = 0; i<workouts.length;i++) { %> 
-            <div class="col-md-4">
-            <a href="/workout/<%= workouts[i].slug %>">   
-               <div class="se_img">
-                  <figure><img src="/<%= workouts[i].image  %>" alt="#"/></figure>
-               </div>
-               <div class="text-center">
-                 <h3 class="text-white"><%= workouts[i].name %></h3>
-               </div>
-            </a>
-            <div class="clearfix">
-              <ul style="list-style-type: none;">
-                <li style="float: left;"><button class="btn btn-warning rounded-10 text-white"
-                  data-toggle="modal" data-target="#updateWorkout<%= workouts[i]._id  %>"
-                  >
-                  <span>UPDATE</span>
-                </button>
-              </li>
-                <li style="float: right;"><a href="/workout/<%= workouts[i].slug %>?_method=DELETE" 
-                  onclick="return confirm('Are you sure?')"
-                  class="btn btn-danger rounded-10 text-white">
-                  DELETE
-                </a></li>
-              </ul>
-            </div>
-            </div>
-             <!-- Update Modal-->
-      <div class="modal fade" id="updateWorkout<%= workouts[i]._id  %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-          <div class="modal-content">
-              <div class="modal-body customer-box">
-                <!-- Tab Panes -->
-                <div class="tab-content">
-                  <div class="tab-pane active" id="Login">
-                    <form method="post" action="/workout/<%= workouts[i].slug  %>?_method=PUT" class="form-horizontal">
-                        <div class="form-group">
-                          <div class="col-sm-12">
-                            <input type="text" name="name" class="form-control" value="<%= workouts[i].name  %>">
+          <div class="row">
+            <% for (let i = 0; i<workouts.length;i++) { %> 
+              <div class="col-md-4">
+              <a href="/workout/<%= workouts[i].slug %>">   
+                 <div class="se_img">
+                    <figure><img src="/<%= workouts[i].image  %>" alt="#"/></figure>
+                 </div>
+                 <div class="text-center">
+                   <h3 class="text-white"><%= workouts[i].name %></h3>
+                 </div>
+              </a>
+              <div class="clearfix">
+                <ul style="list-style-type: none;">
+                  <li style="float: left;"><button class="btn btn-warning rounded-10 text-white"
+                    data-toggle="modal" data-target="#updateWorkout<%= workouts[i]._id  %>"
+                    >
+                    <span>UPDATE</span>
+                  </button>
+                </li>
+                  <li style="float: right;"><a href="/workout/<%= workouts[i].slug %>?_method=DELETE" 
+                    onclick="return confirm('Are you sure?')"
+                    class="btn btn-danger rounded-10 text-white">
+                    DELETE
+                  </a></li>
+                </ul>
+              </div>
+              </div>
+               <!-- Update Modal-->
+              <div class="modal fade" id="updateWorkout<%= workouts[i]._id  %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                  <div class="modal-content">
+                      <div class="modal-body customer-box">
+                        <!-- Tab Panes -->
+                        <div class="tab-content">
+                          <div class="tab-pane active" id="Login">
+                            <form method="post" action="/workout/<%= workouts[i].slug  %>?_method=PUT" class="form-horizontal">
+                                <div class="form-group">
+                                  <div class="col-sm-12">
+                                    <input type="text" name="name" class="form-control" value="<%= workouts[i].name  %>">
+                                    </div>
+                                  </div>
+                                  <div class="col-sm-12">
+                                    <input type="hidden" name="role" class="form-control"  value="<%= user.role%>" >
+                                    </div>
+                                  </div>
+                                  <div class="form-group">
+                                    <div class="col-sm-12">
+                                      <textarea name="description" class="form-control" cols="30" rows="8"
+                                      required
+                                      ><%= workouts[i].description  %></textarea>
+                                    </div>
+                                  </div>
+                                  <div class="form-group">
+                                    <div class="col-sm-12">
+                                      <select name="category" class="form-control">  
+                                        <% for(let i = 0; i<categories.length; i++) { %> 
+                                        <option value="<%= categories[i]._id %>"><%= categories[i].name %> </option>
+                                        <% } %> 
+                                        </select>
+                                      </div>
+                                    </div>
+                                  <div class="row">
+                                    <div class="col-sm-10">
+                                      <button type="submit" class="btn btn-success btn-radius btn-brd grd1">
+                                        UPDATE
+                                      </button>	
+                                      <button type="submit" class="btn btn-light btn-radius btn-brd grd1"
+                                        data-dismiss="modal" aria-hidden="true"
+                                      >
+                                        Cancel	
+                                      </button>
+                                    </div>	
+                                  </div>
+                              </form>
                             </div>
                           </div>
-                          <div class="col-sm-12">
-                            <input type="hidden" name="role" class="form-control"  value="<%= user.role%>" >
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <div class="col-sm-12">
-                              <textarea name="description" class="form-control" cols="30" rows="8"
-                              required
-                              ><%= workouts[i].description  %></textarea>
-                            </div>
-                          </div>
-                          <div class="form-group">
-                            <div class="col-sm-12">
-                              <select name="category" class="form-control">  
-                                <% for(let i = 0; i<categories.length; i++) { %> 
-                                <option value="<%= categories[i]._id %>"><%= categories[i].name %> </option>
-                                <% } %> 
-                                </select>
-                              </div>
-                            </div>
-                          <div class="row">
-                            <div class="col-sm-10">
-                              <button type="submit" class="btn btn-success btn-radius btn-brd grd1">
-                                UPDATE
-                              </button>	
-                              <button type="submit" class="btn btn-light btn-radius btn-brd grd1"
-                                data-dismiss="modal" aria-hidden="true"
-                              >
-                                Cancel	
-                              </button>
-                            </div>	
-                          </div>
-                      </form>
+                        </div>
                     </div>
-                  </div>
                 </div>
-            </div>
-        </div>
             <% } %> 
+          </div>
           <!-- Modal -->
           <div
             class="modal fade"
