--- a/views/trainer.ejs
+++ b/views/trainer.ejs
@@ -19,44 +19,26 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <p>Lorem Ipsum available, but the majority have suffered </p>
+                     <p>Personal trainer fitness, health and gym coach by MisFit</p>
                   </div>
                </div>
             </div>
             <div class="row">
+               <% for (let i = 0; i<trainers.length;i++) { %> 
                <div class="col-md-4">
-                  <div id="trai" class="trainer_box">
-                     <div class="trainer_img">
-                        <figure><img src="images/tra.jpg" alt="#"/></figure>
+                  <a href="/user/<%= trainers[i]._id %>"> 
+                     <div id="trai" class="trainer_box">
+                        <div class="trainer_img">
+                           <figure><img src="<%= trainers[i].image %> " alt="#"/></figure>
+                        </div>
+                        <div class="trainer">
+                           <h3><%= trainers[i].name  %></h3>
+                           <p><%= trainers[i].email %> </p>
+                        </div>
                      </div>
-                     <div class="trainer">
-                        <h3>sandy Mark </h3>
-                        <p>architecture</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-md-4">
-                  <div id="trai" class="trainer_box">
-                     <div class="trainer_img">
-                        <figure><img src="images/tra0.jpg" alt="#"/></figure>
-                     </div>
-                     <div class="trainer">
-                        <h3>limijack </h3>
-                        <p>Maping</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-md-4">
-                  <div id="trai" class="trainer_box">
-                     <div class="trainer_img">
-                        <figure><img src="images/tra1.jpg" alt="#"/></figure>
-                     </div>
-                     <div class="trainer">
-                        <h3>smith den </h3>
-                        <p>Metarial</p>
-                     </div>
-                  </div>
-               </div>
+                  </a>
+               </div>   
+               <% } %>         
             </div>
          </div>
       </div>
