trainer single page created and completed

--- a/views/trainer.ejs
+++ b/views/trainer.ejs
@@ -26,7 +26,7 @@
             <div class="row">
                <% for (let i = 0; i<trainers.length;i++) { %> 
                <div class="col-md-4">
-                  <a href="/user/<%= trainers[i]._id %>"> 
+                  <a href="/trainer/<%= trainers[i]._id %>"> 
                      <div id="trai" class="trainer_box">
                         <div class="trainer_img">
                            <figure><img src="<%= trainers[i].image %> " alt="#"/></figure>
