--- a/views/trainer-single.ejs
+++ b/views/trainer-single.ejs
@@ -7,9 +7,35 @@
      <div class="row">
         <div class="col-md-12">
            <div class="title">
-           <h2>Sandra</h2>
+           <h2><%= trainer.name  %> </h2>
            </div>
         </div>
+     </div>
+  </div>
+</div>
+
+<div  class="services">
+  <div class="container">
+     <div class="row">
+        <div class="col-md-12">
+           <div class="titlepage">
+              <p>You can review the following workouts to get training from <%= trainer.name %> .</p>
+           </div>
+        </div>
+     </div>
+     <div class="row">
+        <% for (let i = 0; i<workouts.length;i++) { %> 
+        <div class="col-md-4">
+        <a href="/workout/<%= workouts[i].slug %>">   
+           <div class="se_img">
+              <figure><img src="/<%= workouts[i].image  %>" alt="#"/></figure>
+           </div>
+           <div class="text-center">
+             <h3 class="text-white"><%= workouts[i].name %></h3>
+           </div>
+        </a>
+        </div>
+        <% } %> 
      </div>
   </div>
 </div>
