--- a/views/workout.ejs
+++ b/views/workout.ejs
@@ -19,7 +19,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <p>Choose a category that best suits the workout you're searching for. Once in the category, use the sort and filter options to find the right workout for your experience and goals.</p>
+                     <p>Choose a training that best suits the workout you're searching for. Once in the training, use the sort and filter options to find the right workout for your experience and goals.</p>
                   </div>
                </div>
             </div>
