search functionality and area completed

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -91,7 +91,7 @@
                     <figure><img src="/<%= workouts[i].image  %>" alt="#"/></figure>
                  </div>
                  <div class="text-center">
-                   <h3 class="text-white"><%= workouts[i].name %></h3>
+                   <h3 class="text-white"><%= workouts[i].name.substring(0,30)+ "..." %></h3>
                  </div>
               </a>
               <div class="clearfix">
