--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -68,17 +68,20 @@ Message</textarea
       </div>
       <div class="col-md-6">
         <div class="map_main">
-          <div class="map-responsive">
-            <iframe
-              src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&amp;q=Eiffel+Tower+Paris+France"
-              width="600"
-              height="425"
-              frameborder="0"
-              style="border: 0; width: 100%"
-              allowfullscreen=""
-            ></iframe>
-          </div>
-        </div>
+          <div class="map-responsive" 
+          style="overflow:hidden;
+                  width: 600px;
+                  height: 425px;
+                  position: relative;">
+         <iframe width="700" 
+                 height="440" 
+                 src="https://maps.google.com/maps?width=700&amp;height=440&amp;hl=en&amp;q=%C3%87ukur%C3%A7ay%C4%B1r%2C%20Hastane%20Sk.%20No%3A33%2C%2061040%20Trabzon%20Merkez%2FTrabzon+(MisFit)&amp;ie=UTF8&amp;t=&amp;z=10&amp;iwloc=B&amp;output=embed" 
+                 frameborder="0" 
+                 scrolling="no" 
+                 marginheight="0" 
+                 marginwidth="0">
+        </iframe>
+        <div style="position: absolute;width: 80%;bottom: 10px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;"><small style="line-height: 1.8;font-size: 2px;background: #fff;">Powered by <a href="https://embedgooglemaps.com/">Embed Google Maps</a> & <a href="https://www.pteducation.se/pt-utbildning">personlig tränare utbildning stockholm</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><br />
       </div>
     </div>
   </div>
