--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -278,6 +278,16 @@
                <h3 class="text-white"><%= user.workouts[i].name %></h3>
              </div>
           </a>
+          <div class="clearfix">
+            <ul style="list-style-type: none;">
+              <li style="float: right;">
+                <form class="mb-3" method="post" action="/workout/release">
+                  <input type="hidden" name="workout_id" value="<%= user.workouts[i]._id %>">
+                  <button class="btn btn-sm btn-danger text-white">RELEASE</button>
+               </form>
+              </li>
+            </ul>
+          </div>
           </div>
           <% } %> 
        </div>
