--- a/views/trainer-single.ejs
+++ b/views/trainer-single.ejs
@@ -7,7 +7,7 @@
      <div class="row">
         <div class="col-md-12">
            <div class="title">
-           <h2><%= trainer.name  %> </h2>
+           <h2><%= trainer.name  %> Workouts</h2>
            </div>
         </div>
      </div>
